fixed spacing for play link button and fixed edit button not showing on edit about

--- a/neuro_arcade/reactapp/src/styles/App.module.css
+++ b/neuro_arcade/reactapp/src/styles/App.module.css
@@ -65,6 +65,8 @@
             display: flex;
             gap: 1em;
             margin: 1em 0;
+            flex-direction: column;
+            align-items: center;
             .Toolbar {
                 border-radius: 0.5em 0.5em 0 0;
                 background-color: rgba(255, 255, 255, 0.1);
@@ -139,6 +141,7 @@
         #details {
             gap: 5em;
             overflow-x: scroll;
+            flex-direction: row;
         }
         .Header {
             z-index: 1;
